# 10.2

./: Body.cpp  CMakeLists.txt  Source1.cpp  Triangle.cpp  Triangle.h  header_heirs_parallelogram.cpp  header_quadrilateral.cpp  heirs_parallelogram.cpp  heirs_quadrangle.cpp  heirs_square.cpp  heirs_square.h  heirs_triangle.cpp  heirs_triangle.h  quadrilateral.cpp
