cmake_minimum_required(VERSION 3.22.0)
project(shapes63)
add_executable(run_shapes63 Body.cpp
Triangle.cpp Triangle.h header_Triangle.cpp
heirs_triangle.cpp heirs_triangle.h header_heirs_triangle.cpp
quadrilateral.cpp quadrilateral.h header_quadrilateral.cpp
heirs_parallelogram.cpp heirs_parallelogram.h header_heirs_parallelogram.cpp
heirs_quadrangle.cpp heirs_quadrangle.h Source1.cpp
heirs_square.cpp heirs_square.h Source2.cpp)
